minor text change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
     <div class="library-box">
-        <h1>Braids of grain spin wildly; a room with no walls is collecting, pooling in the corner. A spigot becomes
-            available.</h1>
+        <h1>Braids of grain spin wildly; a room with no walls is collecting, pooling in the mirror. A spigot becomes available.</h1>
         <form action="/upload_file.php" method="post" enctype="multipart/form-data" class="flex-container">
             <input type="file" id="box1" name="fileToUpload">
             <input style="width: 100px" type="submit">
