--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="library-box">
         <h1>Braids of grain spin wildly; a room with no walls is collecting, pooling in the mirror. A spigot becomes available.</h1>
         <form action="/upload_file.php" method="post" enctype="multipart/form-data" class="flex-container">
-            <input type="file" id="box1" name="fileToUpload">
+            <input type="file" name="fileToUpload">
+            <input type="hidden" name="box" value="box">
             <input style="width: 100px" type="submit">
-            <p>hello.</p>
         </form>
 
     </div>
