use an active class

--- a/header.html
+++ b/header.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
+
 <head>
+    <style>
+        a {
+            margin-left: 10px;
+        }
+        .active {
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
     <div style="align-items: center; display: flex; margin: 0px 10px; text-align: left; border-bottom: 1px solid black">
         <h2>❀</h2>
-        <a style="margin-left: 10px" href="soil.php">(1) Soil</a>
-        <a style="margin-left: 10px" href="tool-shed.php">(2) Tool Shed</a>
-        <a style="margin-left: 10px" href="index.php">(3) Garden</a>
+        <?php
+            $current_page = basename($_SERVER['PHP_SELF']);
+        ?>
+        <a class="<?= $current_page == 'soil.php' ? 'active' : '' ?>" href="soil.php">(1) Soil</a>
+        <a class="<?= $current_page == 'tool-shed.php' ? 'active' : '' ?>" href="tool-shed.php">(2) Tool Shed</a>
+        <a class="<?= $current_page == 'index.php' ? 'active' : '' ?>" href="index.php">(3) Garden</a>
+
     </div>
 </body>
